objects/Developer__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>To store The Developer Country</description>
    <inlineHelpText>Enter Country</inlineHelpText>
    <label>Country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUSTRALIA</fullName>
            </value>
            <value>
                <fullName>INDIA</fullName>
                <default>true</default>
                <label>INDIA</label>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>