objects/Developer__c/fields/Reporting_Manager__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reporting Manager</label>
    <referenceTo>Managaer__c</referenceTo>
    <relationshipLabel>Developers</relationshipLabel>
    <relationshipName>Developers</relationshipName>
    <type>Lookup</type>
</CustomField>